# backend/routes/auth.js
@@ -1,17 +1,16 @@
 const router = require('express').Router();
 const User = require('../models/User');
 const Account = require('../models/Account');
+const Session = require('../models/Session');
 const bcrypt = require('bcrypt');
 const { response } = require('express');
 const jwt = require('jsonwebtoken');
 const verify = require('./verifyToken');
-const { registerValidation, loginValidation } = require('../validation');
+const { registerValidation, loginValidation } = require('./validation');
 
 //REGISTER
 //registers an userr
-router.get('/', async (req, res) => {
-    res.send('Viva la stallman, pendejo!')
-}),
+
 router.post('/', async (req, res) => {
     const user = new User({
         name: req.body.name,
@@ -31,9 +30,29 @@ router.post('/', async (req, res) => {
 });
 
 //LOGIN
-
+router.get('/login', async (req, res) => {
+    res.send('Viva la stallman, pendejo!');
+}),
 router.post('/login',  async (req, res) => {
 
+    const legitSession = new Session({
+        email: req.body.email,
+        password: req.body.password
+    })
+    try {
+        const session = await legitSession.save();
+        res.json(session);
+        
+        const token = jwt.sign({_id: user._id}, process.env.TOKEN_SECRET);
+        res.header('auth-token', token).send(token);
+        res.send(token);
+        res.send('Logged in!');
+    } catch (e) {
+        res.statusCode = 409
+        //res.json({message: err });
+        res.json('The session was not initiated.');
+    }
+    /*
     const {error} = loginValidation(req.body);
     if (error) return res.status(400).send(error.details[0].message);
 
@@ -42,14 +61,11 @@ router.post('/login',  async (req, res) => {
     const user = await User.findOne({email: req.body.email});
     if (!user) return res.status(400).send('wrong email or password');
     //PASSWORD IS CORRECT
-    const validPass = await bcrypt.compare(req.body.password,user.password);
-    if(!validPass) return res.status(400).send('Invalid password')
+    const validPass = await bcrypt.compare(req.body.password, user.password);
+    if(!validPass) return res.status(400).send('Invalid password');
 
+    */
     //CREATE AND ASSIGN A TOKEN
-
-    const token =jwt.sign({_id: user._id}, process.env.TOKEN_SECRET);
-    res.header('auth-token', token).send(token);
-    res.send('Logged in!');
 });
 
 module.exports = router;
